Add top and bottom navbars, google image, searchbar and buttons

--- a/index.html
+++ b/index.html
@@ -1,32 +1,219 @@
 <!DOCTYPE html>
 <html>
     <style>
-        .center {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
+        .container {
+            min-height: 350px;
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            flex-wrap: wrap;
+            align-content: center;
+            justify-content: flex-end;
         }
-        #logo {
-            margin-top: 13.5%;
+        .item {
+            margin-top: 2%;
+        }
+        .lucky {
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+            justify-content: center;
+            flex-grow: 1;
+
+        }
+        .lucky button {
+            background-color: rgb(235, 235, 235);
+            border-style: none;
+            height: 40px;
+            font-family: Arial, Helvetica, sans-serif;
+            color: rgb(82, 81, 81);
+            border-radius: 8px;
+            margin: 5px;
+        }
+        .lucky button:hover {
+            background-color: rgb(235, 235, 235);
+            border-style: solid;
+            font-family: Arial, Helvetica, sans-serif;
+            color: rgb(77, 77, 77);
+            border-color: rgb(77, 77, 77);
+            border-style: solid;
+            border-width: 1px;
+            border-radius: 8px;
+            height: 40px;
+        }
+        .header {
+            display: flex;
+            flex-direction: row;
+            align-content: center;
+            justify-content: space-between;
+            min-width: 100%;
+            margin: auto;
+            background: none;
+        }
+        .left-navbar {
+            display: flex;
+            list-style: none;
+
+        }
+        .left-navbar a {
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 14px;
+            text-decoration: none;
+            padding-top: 1em;
+            padding-left: 1em;
+            display: block;
+            color: rgb(77, 77, 77);
+        }
+        .left-navbar a:hover {
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 14px;
+            text-decoration: underline;
+            padding-top: 1em;
+            padding-left: 1em;
+            display: block;
+            color: rgb(95, 95, 95);
+        }
+        .right-navbar {
+            display: flex;
+            justify-content: space-around;
+            list-style: none;
+
+        }
+        .right-navbar a {
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 14px;
+            text-decoration: none;
+            padding-top: 1em;
+            padding-right: 1em;
+            display: block;
+            color: rgb(77, 77, 77);
+        }
+        .right-navbar a:hover {
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 14px;
+            text-decoration: underline;
+            color: rgb(95, 95, 95);
+            padding-top: 1em;
+            padding-right: 1em;
+            display: block;
+        }
+        #apps {
+            border-style: none;
+            background-color: white;
+            margin-top: 5px;
+            padding-top: 6px;
+            padding-bottom: 6px;
+            color: rgb(77, 77, 77);
+        }
+        #apps:hover {
+            background-color: rgb(231, 231, 231);
+            border-radius: 100%;
+            padding: auto;
+        }
+        #sign-in {
+            background-color: rgba(0, 0, 255, 0.815);
+            font-family: Arial, Helvetica, sans-serif;
+            font-weight: bold;
+            color: white;
+            border-style: none;
+            border-radius: 4px;
+            height: 30px;
+            margin-top: 7px;
+            margin-left: 6px;
         }
         #searchbar {
-            margin-top: 1.5%;
-            width: 500px;
-            height: 20px;
+            height: 30px;
+            border-radius: 26px;
+            border-width: 1px;
+            border-color: rgb(177, 177, 177);
+            border-style: solid;
+        }
+        .footer {
+            display: flex;
+            align-content: flex-end;
+            flex-direction: row;
+            justify-content: space-between;
+            min-width: 100%;
+            height: 50px;
+            margin: 0px;
+            flex-shrink: 0;
+            background: rgba(128, 128, 128, 0.096);
+        }
+        .left-footer {
+            display: flex;
+            list-style: none;
+
+        }
+        .left-footer a {
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 14px;
+            text-decoration: none;
+            display: block;
+            color: rgb(77, 77, 77);
+        }
+        .left-footer a:hover {
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 14px;
+            text-decoration: underline;
+
+            display: block;
+            color: rgb(95, 95, 95);
+        }
+        .right-footer {
+            display: flex;
+            justify-content: space-around;
+            align-content: center;
+            list-style: none;
+
+        }
+        .right-footer a {
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 14px;
+            text-decoration: none;
+            display: block;
+            color: rgb(77, 77, 77);
+        }
+        .right-footer a:hover {
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 14px;
+            text-decoration: underline;
+            color: rgb(95, 95, 95);
+            display: block;
         }
     </style>
     <head>
         <title>Google</title>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
-    <header>
-
-    </header>
     <body>
-        <div class="center">
-            <img class="center" id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google">
+        <div class="header">
+            <ul class="left-navbar">
+                <li><a href="#">About</a></li>
+                <li><a href="#">Store</a></li>
+            </ul>
+            <ul class="right-navbar">
+                <li><a href="#">Gmail</a></li>
+                <li><a href="#">Images</a></li>
+                <button class="material-icons" id="apps">apps</button>
+                <button id="sign-in">Sign in</button>
+            </ul>
         </div>
-        <div class="center">
-            <input id="searchbar" class="center" type="text">
+        <div class="container">
+            <img class="item" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google">
+            <input class="item" id="searchbar" type="text">
         </div>
+        <div class="lucky">
+            <button>Google Search</button>
+            <button>I'm Feeling Lucky</button>
+        </div>
+        <footer class="footer">
+            <ul class="left-footer">
+                <li><a href="#">Advertising</a></li>
+            </ul>
+            <ul class="right-footer">
+                <li><a href="#">Privacy</a></li>
+
+            </ul>
+        </footer>
     </body>
 </html>
