--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Google</title>
         <link rel="icon" href="https://www.google.com/images/branding/googleg/1x/googleg_standard_color_128dp.png">
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
     <body>
         <nav id="top-bar">
@@ -14,18 +15,24 @@
             <div id="top-right">
                 <a class="top-links" id="gmail" href="#">Gmail</a>
                 <a class="top-links" id="images" href="#">Images</a>
-                <button id="apps">Apps</button>
+                <button class="material-icons" id="apps">apps</button>
                 <button id="sign-in">Sign in</button>
             </div>
         </nav>
         <main>
             <img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google">
             <div id="search-box">
+                <i id="search-icon" class="material-icons">search</i>
+                <i id="mic-icon" class="material-icons">mic</i>
+
                 <input type="text">
             </div>
             <div id="search-buttons">
                 <button>Google Search</button>
-                <button>I'm Feeling Lucky</button>
+                <button style="width: 142px;">I'm Feeling Lucky</button>
+            </div>
+            <div id="space">
+                <br>
             </div>
         </main>
         <footer id="bottom-bar">
