More CSS tweaks. Added tooltips, hover shadow effects, icon positioning.

--- a/index.html
+++ b/index.html
@@ -19,22 +19,29 @@
                 <button id="sign-in">Sign in</button>
             </div>
         </nav>
+        <div id="icons">
+            <div id="icon-overlay">
+                <i id="search-icon" class="material-icons">search</i>
+                <i id="mic-icon" class="material-icons">
+                    mic
+                    <span id="tooltiptext">Search by voice</span>
+                </i>
+            </div>
+        </div>
         <main>
             <img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google">
+            <input type="text">
             <div id="search-box">
-                <i id="search-icon" class="material-icons">search</i>
-                <i id="mic-icon" class="material-icons">mic</i>
-
-                <input type="text">
+                <span id="tooltiptext">Search</span>
             </div>
             <div id="search-buttons">
                 <button>Google Search</button>
                 <button style="width: 142px;">I'm Feeling Lucky</button>
             </div>
-            <div id="space">
-                <br>
-            </div>
         </main>
+        <div id="spacer">
+            <br>
+        </div>
         <footer id="bottom-bar">
             <div id="bottom-left">
                 <a class="bottom-links" id="advertising" href="#">Advertising</a>
