--- a/index.html
+++ b/index.html
@@ -7,52 +7,53 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
     <body>
-        <nav id="top-bar">
-            <div id="top-left">
-                <a class="top-links" id="about" href="#">About</a>
-                <a class="top-links" id="store" href="#">Store</a>
+        <div id="page-wrapper">
+            <nav id="top-bar">
+                <div id="top-left">
+                    <a class="top-links" id="about" href="#">About</a>
+                    <a class="top-links" id="store" href="#">Store</a>
+                </div>
+                <div id="top-right">
+                    <a class="top-links" id="gmail" href="#">Gmail</a>
+                    <a class="top-links" id="images" href="#">Images</a>
+                    <button class="material-icons" id="apps">apps</button>
+                    <button id="sign-in">Sign in</button>
+                </div>
+            </nav>
+            <div id="content-wrapper">
+                <div id="icons">
+                    <div id="icon-overlay">
+                        <i id="search-icon" class="material-icons">search</i>
+                        <i id="mic-icon" class="material-icons">
+                            mic
+                            <span id="tooltiptext">Search by voice</span>
+                        </i>
+                    </div>
+                </div>
+                <main>
+                    <img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google">
+                    <input type="text">
+                    <div id="search-box">
+                        <span id="tooltiptext">Search</span>
+                    </div>
+                    <div id="search-buttons">
+                        <button>Google Search</button>
+                        <button style="width: 142px;">I'm Feeling Lucky</button>
+                    </div>
+                </main>
             </div>
-            <div id="top-right">
-                <a class="top-links" id="gmail" href="#">Gmail</a>
-                <a class="top-links" id="images" href="#">Images</a>
-                <button class="material-icons" id="apps">apps</button>
-                <button id="sign-in">Sign in</button>
-            </div>
-        </nav>
-        <div id="icons">
-            <div id="icon-overlay">
-                <i id="search-icon" class="material-icons">search</i>
-                <i id="mic-icon" class="material-icons">
-                    mic
-                    <span id="tooltiptext">Search by voice</span>
-                </i>
-            </div>
+            <footer id="footer">
+                <div id="bottom-left">
+                    <a class="bottom-links" id="advertising" href="#">Advertising</a>
+                    <a class="bottom-links" id="business" href="#">Business</a>
+                    <a class="bottom-links" id="how-search" href="#">How Search Works</a>
+                </div>
+                <div id="bottom-right">
+                    <a class="bottom-links" id="privacy" href="#">Privacy</a>
+                    <a class="bottom-links" id="terms" href="#">Terms</a>
+                    <a class="bottom-links" id="settings" href="#">Settings</a>            
+                </div>
+            </footer>
         </div>
-        <main>
-            <img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google">
-            <input type="text">
-            <div id="search-box">
-                <span id="tooltiptext">Search</span>
-            </div>
-            <div id="search-buttons">
-                <button>Google Search</button>
-                <button style="width: 142px;">I'm Feeling Lucky</button>
-            </div>
-        </main>
-        <div id="spacer">
-            <br>
-        </div>
-        <footer id="bottom-bar">
-            <div id="bottom-left">
-                <a class="bottom-links" id="advertising" href="#">Advertising</a>
-                <a class="bottom-links" id="business" href="#">Business</a>
-                <a class="bottom-links" id="how-search" href="#">How Search Works</a>
-            </div>
-            <div id="bottom-right">
-                <a class="bottom-links" id="privacy" href="#">Privacy</a>
-                <a class="bottom-links" id="terms" href="#">Terms</a>
-                <a class="bottom-links" id="settings" href="#">Settings</a>            
-            </div>
-        </footer>
     </body>
 </html>
